--- a/loja/src/main/resources/templates/administrativo/home.html
+++ b/loja/src/main/resources/templates/administrativo/home.html
@@ -47,9 +47,32 @@
         <div class="col-md-3">
 
             <ul class="list-group" style="margin-top: 10px;">
-                <li class="list-group-item active" aria-current="true"><i class="fa-solid fa-bars"></i> Menu</li>
+                <li class="list-group-item active" aria-current="true"><i  class="fa-solid fa-gear"></i> Funcionalidades</li>
+                <a href="/cadastroVenda"><li class="list-group-item">Efetuar Venda</li></a>
+                <a href="/listarVenda"><li class="list-group-item">Listar Vendas</li></a>
+
+                <a href="/cadastroEntrada"><li class="list-group-item">Efetuar entrada de produtos </li></a>
+                <a href="/listarEntrada"><li class="list-group-item">Listar entrada de produtos </li></a>
+
+
+
+                <li class="list-group-item active" aria-current="true"><i class="fa-solid fa-plus"></i> Cadastros</li>
                 <a href="/cadastroEstado"> <li class="list-group-item">Cadastro Estado</li></a>
+                <a href="/cadastroCidade"> <li class="list-group-item">Cadastro Cidade</li></a>
+                <a href="/cadastroFuncionario"> <li class="list-group-item">Cadastro Funcionario</li></a>
+                <a href="/cadastroCliente"> <li class="list-group-item">Cadastro Cliente</li></a>
+                <a href="/cadastroFornecedor"> <li class="list-group-item">Cadastro Fornecedor</li></a>
+                <a href="/cadastroProduti"> <li class="list-group-item">Cadastro Produto</li></a>
+
+
+                <li class="list-group-item active" aria-current="true"><i class="fa-solid fa-list"></i> Listas</li>
                 <a href="/listarEstado"><li class="list-group-item">Listar Estados</li></a>
+                <a href="/listarCidade"> <li class="list-group-item">Cadastro Cidade</li></a>
+                <a href="/listarFuncionario"> <li class="list-group-item">Cadastro Funcionario</li></a>
+                <a href="/listarCliente"> <li class="list-group-item">Cadastro Cliente</li></a>
+                <a href="/listarFornecedor"> <li class="list-group-item">Cadastro Fornecedor</li></a>
+                <a href="/listarProduti"> <li class="list-group-item">Cadastro Produto</li></a>
+
             </ul>
 
         </div>
