--- a/loja/src/main/resources/templates/administrativo/home.html
+++ b/loja/src/main/resources/templates/administrativo/home.html
@@ -67,11 +67,11 @@
 
                 <li class="list-group-item active" aria-current="true"><i class="fa-solid fa-list"></i> Listas</li>
                 <a href="/listarEstado"><li class="list-group-item">Listar Estados</li></a>
-                <a href="/listarCidade"> <li class="list-group-item">Cadastro Cidade</li></a>
-                <a href="/listarFuncionario"> <li class="list-group-item">Cadastro Funcionario</li></a>
-                <a href="/listarCliente"> <li class="list-group-item">Cadastro Cliente</li></a>
-                <a href="/listarFornecedor"> <li class="list-group-item">Cadastro Fornecedor</li></a>
-                <a href="/listarProduti"> <li class="list-group-item">Cadastro Produto</li></a>
+                <a href="/listarCidade"> <li class="list-group-item">Listar Cidade</li></a>
+                <a href="/listarFuncionario"> <li class="list-group-item">Listar Funcionario</li></a>
+                <a href="/listarCliente"> <li class="list-group-item">Listar Cliente</li></a>
+                <a href="/listarFornecedor"> <li class="list-group-item">Listar Fornecedor</li></a>
+                <a href="/listarProduti"> <li class="list-group-item">Listar Produto</li></a>
 
             </ul>
 
