--- a/loja/src/main/resources/templates/administrativo/home.html
+++ b/loja/src/main/resources/templates/administrativo/home.html
@@ -62,7 +62,7 @@
                 <a href="/cadastroFuncionario"> <li class="list-group-item">Cadastro Funcionario</li></a>
                 <a href="/cadastroCliente"> <li class="list-group-item">Cadastro Cliente</li></a>
                 <a href="/cadastroFornecedor"> <li class="list-group-item">Cadastro Fornecedor</li></a>
-                <a href="/cadastroProduti"> <li class="list-group-item">Cadastro Produto</li></a>
+                <a href="/cadastroProduto"> <li class="list-group-item">Cadastro Produto</li></a>
 
 
                 <li class="list-group-item active" aria-current="true"><i class="fa-solid fa-list"></i> Listas</li>
@@ -71,7 +71,7 @@
                 <a href="/listarFuncionario"> <li class="list-group-item">Listar Funcionario</li></a>
                 <a href="/listarCliente"> <li class="list-group-item">Listar Cliente</li></a>
                 <a href="/listarFornecedor"> <li class="list-group-item">Listar Fornecedor</li></a>
-                <a href="/listarProduti"> <li class="list-group-item">Listar Produto</li></a>
+                <a href="/listarProduto"> <li class="list-group-item">Listar Produto</li></a>
 
             </ul>
 
