--- a/loja/src/main/resources/templates/administrativo/produto/lista.html
+++ b/loja/src/main/resources/templates/administrativo/produto/lista.html
@@ -43,7 +43,7 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
 
     <table class="table" id="tabela">
         <thead>
@@ -57,6 +57,7 @@
             <th>Preço de Venda</th>
             <th>Lucro</th>
             <th>Margem de Lucro</th>
+            <th>Opções</th>
 
         </tr>
         </thead>
